# namadexer

./: .dockerignore  .earthlyignore  .gitignore  Cargo.toml  Dockerfile  Earthfile  Makefile  README.earthly.md  README.md  deny.toml  zondax.yaml
.github/workflows/: audit.yml  main.yml  publish-earthly.yml  test.yml
benches/: get_block_bench.rs  save_blocks_bench.rs  utils.rs
config/: Settings.example.toml  Settings.toml
contrib/: docker-compose.yaml  prometheus-compose.yaml
contrib/helm/: indexer-values.yaml  server-values.yaml
docs/: 01-index.md  01-overview.md  02-overview.md  03-indexer.md  04-server.md  05-development.md  06-deployment.md  07-telemetry.md  README.md  deployment.md  indexer.md  overview.md  server.md  telemetry.md
earthly-dockerfile/: Earthfile
examples/: generate.rs
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml
src/: config.rs  database.rs  error.rs  lib.rs  queries.rs  tables.rs  telemetry.rs  utils.rs  views.rs
src/indexer/: mod.rs  utils.rs
src/server/: account.rs  blocks.rs  endpoints.rs  mod.rs  proposal_details.rs  shielded.rs  tx.rs  tx_details.rs  utils.rs
src/server/endpoints/: account.rs  address.rs  block.rs  proposal.rs  stats.rs  transaction.rs  validator.rs
tests/: block_results_vector.json  block_tests.rs  save_block.rs  utils.rs
