[package]
name = "namadexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[[bin]]
name = "server"
path = "src/bin/server.rs"
[[bin]]
name = "indexer"
path = "src/bin/indexer.rs"

[dependencies]
getrandom = { version = "0.2" }
async-trait = "0.1.51"
namada_sdk = { git = "https://github.com/anoma/namada", rev = "v0.31.4" }
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
hex = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", features = ["sink"] }
bytes = "1.0"
time = "0.3"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "json",
    "std",
    "env-filter",
] }
tracing = { version = "0.1.37", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13.3", features = [
    "toml",
    "serde_json",
], default-features = false }
axum = { version = "0.6.18", features = ["tracing", "tokio", "json", "query"] }
serde_derive = "1.0.164"
thiserror = "1.0.40"
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "json",
    "offline",
    "migrate",
] }
prost = "0.12.0"
prost-types = "0.12.0"
futures = "0.3.28"
opentelemetry = "0.20.0"
tracing-opentelemetry = "0.20.0"
opentelemetry-jaeger = "0.19.0"
opentelemetry_api = { version = "0.20.0", features = ["metrics"] }
axum-prometheus = { version = "0.4.0", optional = true }
metrics = "0.21.1"
metrics-exporter-prometheus = { version = "0.12.1", optional = true }
tendermint = "0.34.0"
tendermint-config = "0.34.0"
tendermint-rpc = { version = "0.34.0", features = ["http-client"] }
tendermint-proto = "0.34.0"
clap = { version = "4.4.2", features = ["derive", "env"] }
ureq = "2.9.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = [
    "html_reports",
    "tokio",
    "async_futures",
] }
httpc-test = "0.1.4"


[features]
default = []
prometheus = ["metrics-exporter-prometheus", "axum-prometheus"]

[[bench]]
name = "save_blocks_bench"
harness = false

[[bench]]
name = "get_block_bench"
harness = false
